tests/compile-fail/interned_custom_id_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/compile-fail/interned_custom_id_not_send.rs:33:19
   |
33 |     assert_send::<Interned>();
   |                   ^^^^^^^^ `*const ()` cannot be sent between threads safely
   |
   = help: within `Interned`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `LocalId`
  --> tests/compile-fail/interned_custom_id_not_send.rs:4:8
   |
 4 | struct LocalId {
   |        ^^^^^^^
note: required because it appears within the type `Interned`
  --> tests/compile-fail/interned_custom_id_not_send.rs:25:8
   |
25 | struct Interned {
   |        ^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compile-fail/interned_custom_id_not_send.rs:29:19
   |
29 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ()` cannot be shared between threads safely
  --> tests/compile-fail/interned_custom_id_not_send.rs:34:19
   |
34 |     assert_sync::<Interned>();
   |                   ^^^^^^^^ `*const ()` cannot be shared between threads safely
   |
   = help: within `Interned`, the trait `Sync` is not implemented for `*const ()`
note: required because it appears within the type `LocalId`
  --> tests/compile-fail/interned_custom_id_not_send.rs:4:8
   |
 4 | struct LocalId {
   |        ^^^^^^^
note: required because it appears within the type `Interned`
  --> tests/compile-fail/interned_custom_id_not_send.rs:25:8
   |
25 | struct Interned {
   |        ^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compile-fail/interned_custom_id_not_send.rs:30:19
   |
30 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`
